# stereo_odometry_viso2

./: CMakeLists.txt  README.md  package.xml
config/: viso2.rviz
include/: System.h
launch/: viso2_kitti.launch
src/: System.cpp  stereo_odometry_node.cpp
viso2/: CMakeLists.txt
viso2/src/: demo.cpp
