<?xml version="1.0"?>
<package>
  <name>stereo_odometry</name>
  <version>0.0.1</version>
  <description>Stereo Visual Odometry based on libviso2</description>

  <maintainer email="z691956701@gmail.com">Ke Sun</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend> 
</package>
